--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+title: MaraJadeLives.github.io
+description: A tech blog about being a tech nerd.
